@@ -8,6 +8,8 @@ v0.6 (unreleased)
     -Added support for SweepAlongVector in hfssPositionVariable.
     -Added gold as high conductivity material in hfssAssignMaterial.
     -Added support to DuplicateAlongLine in hfssAssignPositionVariable.
+    -Added option to include material in hfssBox.
+    -Added option to disable solve inside in hfssBox. Note: it doesn't work with vacuum as material.
     -Fix optional units argument in hfssEditSlave.
     -Fix rotation/move of one element when specified with a string.
     -Fix command path in hfssExecuteScript (thanks arwsl).
